  * Fix add_torrent_url() to download the torrent file in a thread to prevent
    the main thread from blocking and causing the daemon to freeze.
  * Removed the 'Maximum Connections Per Second' setting and replaced it with a
    default setting of 20.  This should alleviate speed issues some are experiencing.
  * Changed max half-open connections default limit to 8 on XP/2000 and 4 on Vista

 GtkUI:
  * Improve performance of files tab by only updating when values change
  
 Misc:
  * Fix #187 set a 5 second timer to save the config file after a config value
    has been changed.
  * Fix #503 change the boost lib detection logic to first look for -mt and
    if not available, fall back to regular boost lib (non-multithreaded)

 WebUI:
  * Add enable "Auto Add" checkbox
 
Deluge 1.0.0 - "Sharks Are Bulletproof" (21 September 2008)
 Core:
  * Include GeoIP database for country look-ups
  * Fix upgrading from 0.5.x state where torrents would have no trackers

Deluge 0.9.09 - "1.0.0_RC9" (15 September 2008)
 Core:
  * Bug fixes in libtorrent including a crash when the tracker doesn't
    have 'announce' in it's url.
  * Fix fastresume issue causing loss of data by deleting the fastresume file
    before writing a new one
  * Fix #475 the use of unicode paths when adding torrents
    
 GtkUI:
  * Fix add torrent dialog closing preventing another dialog from being shown
  * Fix various issues when not using English
  * Fix setting file priorities on folders

Deluge 0.9.08 - "1.0.0_RC8" (27 August 2008)
 Core:
  * Attempt to automatically upgrade a 0.5.x state file to new format
  * Tracker errors now change the tracker status
 
 Plugins:
  * Fix bug in Blocklist that prevented downloading a new file every X days
  
 GtkUI:
  * Sort filenames alphabetically in add torrent dialog
  * Fix setting file priorities on folders
  * Fix #453 allow showing of text in the toolbar buttons
  
Deluge 0.9.07 - "1.0.0_RC7" (18 August 2008)
 Core: